# chain-weaver

./: .env.example  Cargo.toml  QUICK_START.md  build-error.txt  build-output.txt  build-wsl.sh  check-balance.mjs  check-contract.mjs  check-output.txt  dataloom.wasm  debug-output.txt  deep-debug.mjs  deploy-contract.js  deploy-contract.mjs  deploy-direct.mjs  deploy-output.txt  deploy-result.json  deploy-result.txt  deploy-sepolia.mjs  deploy-wsl.sh  deploy.py  deploy.sh  deployed-address.txt  deployment-result.txt  get-contract-address.mjs  get-deployed-address.mjs  hardhat.config.js  index.html  lint-results.json  package-lock.json  package.json  rust-toolchain.toml  start-local-blockchain.sh  start-local-chain.bat  tailwind.config.ts  test-contract.mjs  test-fixed-abi.mjs  test-user-contract.mjs  verify-contract.mjs
.agent/workflows/: deploy.md
contracts/: DataLoom.sol
foundry-local/cache/: solidity-files-cache.json
foundry-local/src/: DataLoom.sol
scripts/: deploy-arbitrum.js  deploy-local.js
src/: index.css  lib-test.rs  lib.rs
src/components/: ArchitectureDiagram.tsx  ConnectWallet.tsx  Demo.tsx  Footer.tsx  Gallery.tsx  Header.tsx  Hero.tsx  Problem.tsx  Solution.tsx  TechStack.tsx  UseCases.tsx  WeavePattern.tsx  Web3Provider.tsx
src/components/ui/: button.tsx
src/hooks/: useDataLoom.ts  useScrollAnimation.ts
src/lib/: contracts.ts  web3-config.ts
src/pages/: Index.tsx
