[package]
name = "dataloom"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.9.2"
alloy-primitives = "0.7.2"
alloy-sol-types = "0.7.2"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[dependencies.ruint]
version = "=1.12.3"
default-features = false

